修复adbkit在mac失效